Fixing Layout Bugs By Global Styles

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,7 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 a {
@@ -36,8 +36,35 @@ a {
   cursor: pointer;
 }
 
-.font-gray {color: #636363;}
-.font-fade {color: #7d7d7d; }
+.font-gray {
+  color: #636363;
+}
+.font-fade {
+  color: #7d7d7d;
+}
+
+.grid {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin-top: 3rem;
+}
+
+.card {
+  margin: 1rem;
+  flex-basis: 40%;
+  padding: 1.5rem;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  box-shadow: 1px 1px 16px -7px grey;
+  border-radius: 10px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+  margin: 20px;
+  padding-bottom: 30px;
+}
 .sArticle {
   display: flex;
   margin-top: 70px;
@@ -62,6 +89,14 @@ a {
       @media (max-width: 768px) {
         min-height: 200px;
         max-height: 400px;
+      }
+      img {
+        min-height: 400px;
+        max-height: 600px;
+        @media (max-width: 768px) {
+          min-height: 200px;
+          max-height: 400px;
+        }
       }
     }
   }
